--- a/templates/media/inc/playlist_shutter.html
+++ b/templates/media/inc/playlist_shutter.html
@@ -1,25 +1,11 @@
 {% load mezzanine_tags keyword_tags i18n organization_tags %}
 
-<div class="col-xs-3">
-    <div class="home__shutter-item">
-        <h2><a href="{% url 'organization-playlist-list' 'audio' %}" title="">{% trans 'Audios' %}</a></h2>
-        <p>{% trans 'View all the audio medias' %}</p>
-        <a href="{% url 'organization-playlist-list' 'audio' %}" title="">{% trans 'See all audios >' %}</a>
-    </div>
-</div>
-
-<div class="col-xs-3">
-    <div class="home__shutter-item">
-        <h2><a href="{% url 'organization-playlist-list' 'video' %}" title="">{% trans 'Videos' %}</a></h2>
-        <p>{% trans 'View all the video medias' %}</p>
-        <a href="{% url 'organization-playlist-list' 'video' %}" title="">{% trans 'See all videos >' %}</a>
-    </div>
-</div>
-
-
 {% for media in home.dynamic_content_home_media.all|slice:":3" %}
     <div class="col-xs-3">
         <div class="home__shutter-item">
+            <div class="fss">
+                {{media.content_object.type}}
+            </div>
             <h2><a href="{{ media.content_object.get_absolute_url }}" title="">{{ media.content_object.title }}</a></h2>
 
             {% if media.content_object.description %}
@@ -32,11 +18,19 @@
                 {% endif %}
             {% endcomment %}
 
-            {% if media.content_object.type == 'video' %}
-                <a href="{{ media.content_object.get_absolute_url }}" title="">{% trans 'See the video' %}</a>
-            {% elif media.content_object.type == 'audio' %}
-                <a href="{{ media.content_object.get_absolute_url }}" title="">{% trans 'Hear the sound' %}</a>
-            {% endif %}
+            {% comment %}
+                {% if media.content_object.type == 'video' %}
+                    <a href="{{ media.content_object.get_absolute_url }}" title="">{% trans 'See the video' %}</a>
+                {% elif media.content_object.type == 'audio' %}
+                    <a href="{{ media.content_object.get_absolute_url }}" title="">{% trans 'Hear the sound' %}</a>
+                {% endif %}
+            {% endcomment %}
         </div>
     </div>
 {% endfor %}
+
+<div class="col-xs-3">
+    <a href="{% url 'organization-playlist-list' 'video' %}" title="{% trans 'View all medias' %}" class="home__shutter-item home__shutter-item--button">
+        <h2>{% trans 'View all medias' %}</h2>
+    </div>
+</div>
