--- a/app/templates/media/playlist_list.html
+++ b/app/templates/media/playlist_list.html
@@ -41,7 +41,10 @@
             {% endwith %}
         {% endfor %}
     </div>
+{% endblock %}
+
+{% block main %}
+    {{ block.super }}
 
     {% pagination_for playlists %}
-
 {% endblock %}
