--- a/templates/pages/menus/current_tree_event.html
+++ b/templates/pages/menus/current_tree_event.html
@@ -29,22 +29,24 @@
     {% endif %}
     {% if branch_level == 1 %}
         {% for page in page_branch %}
-            <li class="nav-tree__item">
-                <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-                {% if page.is_current_or_ascendant and page.has_children_in_menu %}
-                    <ul class="nav-tree nav-tree--level-{{ branch_level }}">
-                        {% page_menu page %}
-                    </ul>
-                    <ul class="nav-tree" data-summary>
-                        {% include "pages/menus/current_tree_summary.html" %}
-                    </ul>
-                {% endif %}
-                {% if page.is_current_or_ascendant and not page.has_children_in_menu %}
-                    <ul class="nav-tree" data-summary>
-                        {% include "pages/menus/current_tree_summary.html" %}
-                    </ul>
-                {% endif %}
-            </li>
+            {% if page.in_menu %}
+                <li class="nav-tree__item">
+                    <a class="nav-tree__link{% if page.is_current or page.is_current_or_ascendant %} active{% endif %}" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                    {% if page.is_current_or_ascendant and page.has_children_in_menu %}
+                        <ul class="nav-tree nav-tree--level-{{ branch_level }}">
+                            {% page_menu page %}
+                        </ul>
+                        <ul class="nav-tree" data-summary>
+                            {% include "pages/menus/current_tree_summary.html" %}
+                        </ul>
+                    {% endif %}
+                    {% if page.is_current_or_ascendant and not page.has_children_in_menu %}
+                        <ul class="nav-tree" data-summary>
+                            {% include "pages/menus/current_tree_summary.html" %}
+                        </ul>
+                    {% endif %}
+                </li>
+            {% endif %}
         {% endfor %}
     {% endif %}
     {% if branch_level == 2 %}
