--- a/app/templates/pages/teampage.html
+++ b/app/templates/pages/teampage.html
@@ -75,23 +75,30 @@
 {% endblock %}
 
 {% block page_person_list %}
-<div class="white-bg pb2">
-  <hr class="mt0" />
-    <div class="container">
-      {% activity_statuses as statuses %}
-        {% for status in statuses %}
-          {% with page.teampage.team|get_team_persons:status as persons %}
-            {% if persons %}
-                {{ status.name }} :
-                {% for person in persons %}
-                    <a href="{% url 'organization-network-person-detail' person.slug %}">{{ person.title }}</a>{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-                <br/>
-            {% endif %}
-          {% endwith %}
-        {% endfor %}
-    </div>
-</div>
+    {% activity_statuses as statuses %}
+    {% if statuses|length > 0 %}
+        <div class="white-bg">
+        <hr class="mt0" />
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg" data-summary-content>
+                        <h2 class="dotted">{% trans 'Participants' %}</h2>
+                        {% for status in statuses %}
+                            {% with page.teampage.team|get_team_persons:status as persons %}
+                                {% if persons %}
+                                    <strong>{{ status.name }} :</strong>
+                                    {% for person in persons %}
+                                        <a href="{% url 'organization-network-person-detail' person.slug %}">{{ person.title }}</a>{% if not forloop.last %}, {% endif %}
+                                    {% endfor %}
+                                    <br/>
+                                {% endif %}
+                            {% endwith %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
 
 
@@ -104,7 +111,7 @@
                     {% if projects %}
                         <div class="row">
                             <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg" data-summary-content>
-                                <h2>{% trans "Research topics and related projects" %}</h2>
+                                <h2 class="dotted">{% trans "Research topics and related projects" %}</h2>
                                     {% include 'projects/inc/project_list.html' %}
                             </div>
                         </div>
@@ -115,7 +122,7 @@
                 {% if leader_projects or partner_projects %}
                 <div class="row">
                     <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg" data-summary-content>
-                        <h2>{% trans "European and national projects" %}</h2>
+                        <h2 class="dotted">{% trans "European and national projects" %}</h2>
                         {% with leader_projects as projects %}
                             {% include 'projects/inc/project_list.html' %}
                         {% endwith %}
