--- a/templates/pages/teampage.html
+++ b/templates/pages/teampage.html
@@ -74,7 +74,7 @@
     {% endwith %}
 {% endblock %}
 
-{% block page_person_list %}
+{% block page_person_list_team %}
     {% activity_statuses as statuses %}
     {% if statuses|length > 0 %}
         <div class="white-bg">
