--- a/templates/home/inc/services.html
+++ b/templates/home/inc/services.html
@@ -31,7 +31,7 @@
 
     <div class="row">
         <div class="col-sm-6 col-xs-12">
-            <a class="banner banner--colored banner--orange banner--light" href="http://ressources.ircam.fr/" target="_blank" style="background-image:url({% static img/services/resources.jpg' %});">
+            <a class="banner banner--colored banner--orange banner--light" href="http://ressources.ircam.fr/" target="_blank" style="background-image:url({% static 'img/services/resources.jpg' %});">
                 <div class="banner__content">
                     <div class="banner__title fsxxxl">
                         {% trans 'IRCAM Library Center' %}
