--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -271,11 +271,11 @@
 {% if project.demos.all %}
 <div class="page__block{% if block.background_color %} page__block--{{ block.background_color }}{% endif %}">
   <hr class="mt0">
-    <div class="white-bg pb2">
+    <div class="white-bg mb2">
         <div class="container">
             <div class="row" data-summary-content>
                 <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
-                    <ul class="partners-list">
+                    <ul>
                         <h2>{% trans "Demos" %}</h2>
                         {% for demo in project.demos.all %}
                             <li><a href="{% url 'organization-project-demo-detail' demo.slug %}">{{ demo.title }}</a></li>
